--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "4d424096",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1390,7 @@
     }
    ],
    "source": [
-    "model.predict(X_new)  # Verify that the loaded model can make predictions"
+    "model.predict(X_new)  "
    ]
   },
   {
